@@ -107,6 +107,19 @@ class ApplyPluginIntegSpec extends AbstractIntegrationSpec {
 
         and:
         buildFile << junitBasedBuildScript()
+        buildFile << """
+            // Needed when using ProjectBuilder
+            tasks.withType(Test).configureEach {
+                jvmArgumentProviders.add(new CommandLineArgumentProvider() {
+                    @Override
+                    Iterable<String> asArguments() {
+                        return it.javaVersion.isCompatibleWith(JavaVersion.VERSION_16)
+                            ? ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
+                            : []
+                    }
+                })
+            }
+        """
 
         expect:
         executer.withArgument("--info")
