@@ -44,6 +44,17 @@ class ProjectBuilderEndUserIntegrationTest extends AbstractIntegrationSpec {
             testLogging.exceptionFormat = 'full'
         }
 
+        // Needed when using ProjectBuilder
+        tasks.withType(Test).configureEach {
+            jvmArgumentProviders.add(new CommandLineArgumentProvider() {
+                @Override
+                Iterable<String> asArguments() {
+                    return it.javaVersion.isCompatibleWith(JavaVersion.VERSION_16)
+                        ? ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
+                        : []
+                }
+            })
+        }
         """
     }
 
